static/css/main.css
@font-face {font-family:"Minecraft";src:url("minecraft.eot") format("eot"),url("minecraft.woff") format("woff"),url("minecraft.ttf") format("truetype"),url("minecraft.svg#Minecraft") format("svg");font-weight:normal;font-style:normal;}

html {
    background: url(img/blocks.gif);
}

body {
    background: top left url(img/bg_grass.png) repeat-x;
    font-family: Verdana,Tahoma,"DejaVu Sans",sans-serif;
}

.stat-box {
    padding: 1em;
    color: #fff;
    margin-bottom: 1em;
}

#header .stat-box {
    height: 180px;
    margin: 1em;
}

#title {
    color: #fff;
    padding: 1em;
    text-align:center;
    font-family:"Minecraft";
}

#title a {
    color: #fff;
    text-decoration: none;
}

#title h1 {
  margin-bottom: 0;
}

#title img {
    vertical-align: middle;
}

#epicenter {
    background: url(img/adminium.png);
    border: 3px solid black;
}

#epicenter .avatar {
    float: right;
    margin:3px;
}

#epicenter .balance {
    float:right;
    font-family:"Minecraft";
    font-size:x-large;
}

#epicenter .userbox {
    float: right;
    border: 3px solid black;
    padding: 4px;
    background-color:#020;
}

.stat-box {
    background: url(img/dirt.png);
    border: 3px solid black;
}

.stat-box .title {
    background-color: #333;
    padding: 5px;
    margin-bottom: 1em;
    font-family:"Minecraft";
}

#content {
}

#slogan {
    font-style: italic;
    font-size:xx-small;
}

#content .item, #content .comments {
    clear: both;
    border: 3px solid black;
    color: #fff;
    padding: 2em;
    margin-bottom: 2em;
}

#content .item {
    background:url(img/cobblestone.png);
}

#content .comments {
    background:url(img/dirt.png);
}

a:link {
    color: #BD803A
}

a:visited {
    color: #785125;
}

table {
    color: #fff;
    width: 100%;
}

th {
    font-weight:bold;
    padding: 1em;
}

td {
    padding: 0.5em;
}

thead tr, tr.header {
    background-color: #aaa;
    color: #000;
}

tbody tr:nth-child(even) {
    background-color:#444;
}

tbody tr:nth-child(odd) {
    background-color:#222;
}

.forum-post {
    border-top: 1px solid black;
    border-left: 1px solid #888;
    margin-left: 1em;
    background: url(img/adminium.png);
}

.user-tile {
    display: block;
    width: 150px;
    height: 150px;
    text-align: center;
}

.post .user-tile {
    float: left;
}

.user-tile .byline {
    padding: 1em;
}

.user-tile a {
    color: #fff;
}

.forum-post-content {
    padding: 1em;
    margin-left: 150px;
    background: #222;
    border-left: 3px solid black;
}

#nav {
    background-color:#000;
    color:#fff;
    margin-bottom: 1em;
    background: url('img/brick.png');
    border: 3px solid black;
}

#nav .title {
    float: left;
    padding: 10px;
    padding-right: 30px;
    background-color:#aaa;
    background: url('img/stone-brick.png');
    border-right: 3px solid black;
    font-family:"Minecraft";
}

#nav ul {
    list-style: none;
    float: right;
    padding: 10px;
}

#nav li {
    float: left;
    height: 1em;
    padding: 10px;
    background-color: #002334;
    border: 1px solid black;
}

#nav li a {
    vertical-align: center;
    display: block;
}

tr.infoBar td {
    text-align: center;
    font-size: large;
    background-color: #111;
}

tr.sticky a:link {
    color: #210;
}

#invite-code {
    font-size:x-large;
    text-align:center;
    background:url(img/chest-open.png) center no-repeat;
    height: 300;
}

#invite-code input {
    font-size: x-large;
    text-align: center;
    background-color: transparent;
    color: #fff;
    border: 0;
    width: 100px !important;
    top: 155;
    position: relative;
}

#invite-table tr.deleted {
    background-color:#000;
    color:#aaa;
}

#epicenter p {
    margin: 0;
}

#content input, #content textarea {
    width: 100%;
    margin-bottom: 1em;
}

#footer {
    text-align:center;
    background-color: #333;
    border: 2px solid black;
    border-bottom: 0px;
    color: #fff;
    padding: 1em;
    margin-top: 1em;
}

.profile-list ul {
    display:block;
    list-style: none;
}

.profile-list li {
    float: left;
    margin: 1em;
    text-align: center;
    background: url(img/wood.png)
}

.profile-list .user-tile {
    border: 3px solid black;
}

#epicenter ul {
    list-style:none;
}

#epicenter ul a {
    color: #fff;
    font-size:large;
    text-decoration: none;
}

#localnav {
    border: 2px solid black;
    margin-bottom: 1em;
}

#localnav ul {
    list-style: none;
}

#localnav ul li {
    float: left;
}

fieldset {
    background-color:#111;
    border: 1px solid black;
}

.avatar img {
  border: 3px solid black;
}

.news-item .byline {
  float: right;
}

.news-item .dateline {
  clear: left;
}

.news-item h2 {
  float: left;
}

.forum {
    vertical-align: middle;
}

.forum a {
    color: #f00;
}

.forum a:visited {
    color: #f33;
}

.forum .author-info ul {
    list-style: none;
    margin-left: 32;
}

.forum td {
    vertical-align: middle;
}

.forum .topic-link {
    background: url(img/torch-on.png) no-repeat left center;
    height: 48px;
    padding-left: 48px;
}

.forum .topic-link ul {
    list-style: none;
    font-size: x-small;
}

.forum .topic-link .link a {
    font-size: large;
}

.forum .topic-link p {
    margin-bottom: 1em;
}

.forum tr, .forum tr {
  border-top: #888 solid 1px;
  border-bottom: #aaa solid 1px;
}

.topic h2 {
    margin-left: 42px;
}

.post {
    background: url(img/wood.png);
}

.topic.sticky {
    background-color: #d50;
    color: #000;
}

.topic.sticky a {
    color: #fff;
}

.post a {
    color: #f33;
}

.post .dateline {
    float: right;
    font-size: x-small;
}

#messages {
    color: #fff;
}

#messages ul {
    list-style: none;
}

#messages li {
    padding: 3px;
}

#messages li.error {
    background-color: #a00;
    border: 1px solid #faa;
}

#messages li.info {
    background-color: #00b;
    border: 1px solid #c0c0ff;
}

#epicenter .staff-link {
    float: right;
    clear: both;
}
#epicenter .staff-link a {
    font-size: small;
}

#statbox .avatar {
    padding: 5px;
}

.topic .avatar {
    float: left;
}

#donation-slider {
    border: 2px solid black;
    margin-bottom: 1em;
    padding: 3px;
    text-align: center;
}

#donation-progress {
    height: 25px;
    background-color: #0f0;
    background: url(img/diamond-block.png);
    position: relative;
}

#donation-progress:after {
    height: 25px;
    width: 25px;
    position: absolute;
    right: -15px;
    content: "";
    background: url(img/diamond.png) center center no-repeat;
}

#donation-text {
  font-weight: bold;
  vertical-align: middle;
  line-height: 25px;
  padding: 0px 10px;
  text-align: center;
  z-index: 1;
  color: #fff;
  background: url(img/adminium.png);
}

#donation-text a {
  color: #fff;
}

#register-form {
  display: none;
}

#register-button {
  font-size: xx-large;
}

